2005-01-03  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::dup_proc_pipe): Can't close proc pipe when execing
	or we will suffer an exit code race.

2005-01-03  Corinna Vinschen  <corinna@vinschen.de>

	* signal.cc (abort): Call _GLOBAL_REENT's __cleanup.

2005-01-03  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (setmode): Call _fwalk with _GLOBAL_REENT.

2005-01-01  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::stub): Set inuse to false when exiting.
	(cygthread::cygthread): Actually pass name as argument to debugging
	output to avoid SEGV when strace'ing.
	(cygthread::release): Don't set stack_ptr to NULL, since it is only set
	once on first entry to a stub not on each stub iteration.
	(cygthead::exit_thread): Remove obsolete function.
	* cygthread.h (cygthread::exit_thread): Ditto.

2005-01-01  Christopher Faylor  <cgf@timesys.com>

	* shared.cc (open_shared): Don't attempt VirtualAlloc magic if first
	attempt to map memory fails.

2004-12-30  Christopher Faylor  <cgf@timesys.com>

	* devices.cc (device::isfs): Return true for the logical case of
	devn == FH_FS.

2004-12-28  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::dup_proc_pipe): DUPLICATE_CLOSE_SOURCE closes the
	handle regardless, so revert previous change.

2004-12-27  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::stub): Add better debug output.
	(cygthread::cygthread): Ditto.
	(cygthread::terminate_thread): Ditto.  Move inuse test earlier or
	suffer infinite loop.
	* pinfo.cc (_pinfo::dup_proc_pipe): Close handle if DuplicateHandle
	fails and process no longer exists.
	* spawn.cc (spawn_guts): Create process in suspended state if OS
	demands it.
	* wincap.cc: Add "start_proc_suspended" throughout.
	* wincap.h (wincaps): Ditto.
	(wincapc): Ditto.

2004-12-27  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::exit): Beef up debugging output.
	* sigproc.cc (proc_subproc): Detached children apparently need a ppid